--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@-ui/jest",
   "version": "1.0.0",
-  "homepage": "https://github.com/dash-ui/-ui#readme",
-  "repository": "github:dash-ui/-ui",
-  "bugs": "https://github.com/dash-ui/-ui/issues",
+  "homepage": "https://github.com/dash-ui/jest#readme",
+  "repository": "github:dash-ui/jest",
+  "bugs": "https://github.com/dash-ui/jest/issues",
   "license": "MIT",
   "description": "Jest utilities for dash-ui",
   "keywords": [
