--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
   "keywords": [
     "jest"
   ],
-  "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
+  "main": "dist/index.js",
   "files": [
     "/dist"
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "npm run build:cjs && npm run build:es",
-    "build:cjs": "babel src -d dist/cjs -x .js --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
-    "build:es": "cross-env BABEL_ENV=es babel src -d dist/es -x .js --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
+    "build": "babel src -d dist -x .js --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
     "format": "prettier --write \"**/*.{js,md,yml,json,babelrc,eslintrc,prettierrc}\"",
     "lint": "eslint .",
     "prepublishOnly": "npm run lint && npm run test && npm run build && npm run format",
@@ -40,18 +37,32 @@
     ]
   },
   "devDependencies": {
+    "@-ui/styles": "^1.0.36",
+    "@babel/preset-react": "^7.7.0",
     "@lunde/babel-preset-es": "latest",
     "babel-eslint": "latest",
     "cross-env": "latest",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
     "eslint": "latest",
     "eslint-import-resolver-jest": "latest",
     "eslint-plugin-jest": "latest",
     "husky": "latest",
     "jest": "latest",
     "lint-staged": "latest",
+    "preact": "10",
+    "preact-render-to-json": "^3.6.6",
     "prettier": "latest",
+    "pretty-format": "^24.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0",
     "rimraf": "^2.6.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^3.0.0",
+    "css": "^2.2.4"
+  },
   "peerDependencies": {}
 }
