--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@-ui/jest",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "homepage": "https://github.com/dash-ui/jest#readme",
   "repository": "github:dash-ui/jest",
   "bugs": "https://github.com/dash-ui/jest/issues",
@@ -18,6 +18,7 @@
     "jest assertions"
   ],
   "main": "dist/index.js",
+  "types": "types/index.d.ts",
   "files": [
     "/dist"
   ],
